清除掉可能暴漏个人信息的md文档

--- a/analyze/table2017暑期.ipynb
+++ b/analyze/table2017暑期.ipynb
@@ -3,19 +3,23 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from pyhive import hive\n",
     "import pymysql\n",
-    "conn = hive.Connection(host='127.0.0.1', port=10000, username='hadoop')\n",
+    "conn = hive.Connection(host='127.0.0.1', port=10000, username='root')\n",
     "cursor = conn.cursor()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def exec_sql(sql):\n",
@@ -34,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_romance_sql = '''SELECT '2017shu','t_romance',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_romance=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -45,7 +51,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_comedy_sql = '''SELECT '2017shu','t_comedy',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_comedy=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -56,7 +64,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_animate_sql = '''SELECT '2017shu','t_animate',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_animate=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -67,7 +77,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_plot_sql = '''SELECT '2017shu','t_plot',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_plot=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -78,7 +90,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_horror_sql = '''SELECT '2017shu','t_horror',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_horror=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -89,7 +103,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_thriller_sql = '''SELECT '2017shu','t_thriller',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_thriller=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -100,7 +116,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_science_sql = '''SELECT '2017shu','t_science',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_science=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -111,7 +129,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_action_sql = '''SELECT '2017shu','t_action',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_action=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -122,7 +142,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_suspense_sql = '''SELECT '2017shu','t_suspense',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_suspense=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -133,7 +155,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_crime_sql = '''SELECT '2017shu','t_crime',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_crime=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -144,7 +168,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_adventure_sql = '''SELECT '2017shu','t_adventure',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_adventure=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -155,7 +181,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_war_sql = '''SELECT '2017shu','t_war',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_war=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -166,7 +194,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_fantasy_sql = '''SELECT '2017shu','t_fantasy',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_fantasy=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -177,7 +207,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_sports_sql = '''SELECT '2017shu','t_sports',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_sports=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -188,7 +220,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_family_sql ='''SELECT '2017shu','t_family',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_family=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -199,7 +233,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_costume_sql = '''SELECT '2017shu','t_costume',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_costume=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -210,7 +246,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_sword_sql = '''SELECT '2017shu','t_sword',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_sword=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -221,7 +259,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_cowboy_sql = '''SELECT '2017shu','t_cowboy',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_cowboy=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -232,7 +272,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_history_sql = '''SELECT '2017shu','t_history',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_history=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -243,7 +285,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_biography_sql ='''SELECT '2017shu','t_biography',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_biography=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -254,7 +298,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_dance_sql = '''SELECT '2017shu','t_dance',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_dance=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -265,7 +311,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_dark_sql = '''SELECT '2017shu','t_dark',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_dark=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -276,7 +324,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_short_sql = '''SELECT '2017shu','t_short',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_short=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -287,7 +337,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_documentary_sql = '''SELECT '2017shu','t_documentary',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_documentary=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -298,7 +350,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t_others_sql = '''SELECT '2017shu','t_others',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.t_others=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -309,7 +363,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "c_Mainland_sql = '''SELECT '2017shu','c_Mainland',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.c_Mainland=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -320,7 +376,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "c_America_sql = '''SELECT '2017shu','c_America',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.c_America=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -331,7 +389,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "c_Korea_sql = '''SELECT '2017shu','c_Korea',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.c_Korea=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -342,7 +402,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "c_Japan_sql = '''SELECT '2017shu','c_Japan',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.c_Japan=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -353,7 +415,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "c_Hongkong_sql = '''SELECT '2017shu','c_Hongkong',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.c_Hongkong=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -364,7 +428,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "c_Taiwan_sql = '''SELECT '2017shu','c_Taiwan',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.c_Taiwan=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -375,7 +441,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "c_Thailand_sql = '''SELECT '2017shu','c_Thailand',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.c_Thailand=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -386,7 +454,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "c_India_sql = '''SELECT '2017shu','c_India',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.c_India=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -397,7 +467,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "c_France_sql = '''SELECT '2017shu','c_France',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.c_France=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -408,7 +480,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "c_England_sql = '''SELECT '2017shu','c_England',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.c_England=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -419,7 +493,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "c_Russia_sql = '''SELECT '2017shu','c_Russia',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.c_Russia=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -430,7 +506,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "c_Italy_sql = '''SELECT '2017shu','c_Italy',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.c_Italy=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -441,7 +519,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "c_Spain_sql = '''SELECT '2017shu','c_Spain',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.c_Spain=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -452,7 +532,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "c_Germany_sql = '''SELECT '2017shu','c_Germany',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.c_Germany=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -463,7 +545,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "c_Poland_sql = '''SELECT '2017shu','c_Poland',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.c_Poland=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -474,7 +558,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "c_Australia_sql = '''SELECT '2017shu','c_Australia',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.c_Australia=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -485,7 +571,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "c_Iran_sql = '''SELECT '2017shu','c_Iran',t2.v FROM (SELECT SUM(t1.boxoffice) AS v FROM film44 t1 WHERE t1.c_Iran=1 and mdate  >='2017-06-30'and mdate  <='2017-08-31') t2'''\n",
@@ -510,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
